make setup wisecost easier.

--- a/wisecost/wisecost.yaml
+++ b/wisecost/wisecost.yaml
@@ -39,37 +39,9 @@ data:
   wisecost.yaml: |-
     server:
       port: 7070
-      allowedOrigins:
-      - "http://wisecost"
-      - "https://wisecost"
-      - "http://47.92.69.144"
-    engine:
-      defaultClusterId: default
-      max_prometheus_query_duration: 1440m
-      scrape_interval: 30s
-      aggregate_labels:
-        environment:
-        - env
-        product:
-        - product
-        application:
-        - application
-        - app
-        department:
-        - department
-        team:
-        - team
-        - group
-        owner:
-        - owner
     optimize:
       dataSourceName: "wisecost:Wisecost~@tcp(mysql:3306)/wisecost?charset=utf8mb4&parseTime=true"
       maxOpenConns: 10
-    storage:
-      type: file
-      parameters:
-        path: "data/clusters.yaml"
-        directory: "data/"
     kubestore:
       type: mysql
       parameters:
@@ -101,7 +73,7 @@ spec:
         runAsUser: 0
       containers:
         - name: wisecost-ui
-          image: wiseinf/wisecost-ui:eebb346
+          image: wiseinf/wisecost-ui:701d19d
           imagePullPolicy: IfNotPresent
           volumeMounts:
             - name: nginx-config
@@ -117,17 +89,17 @@ spec:
               cpu: 1000m
               memory: 2G
         - name: wisecost
-          image: wiseinf/wisecost:3f3e222
+          image: wiseinf/wisecost:99e308e
           command:
-            - "/wisecost/wisecost"
+            - "/wiseinf/wisecost"
           imagePullPolicy: IfNotPresent
           volumeMounts:
             - name: wisecost-data-volume
-              mountPath: /wisecost/data
+              mountPath: /wiseinf/data
             - name: wisecost-logs-volume
-              mountPath: /wisecost/logs
+              mountPath: /wiseinf/logs
             - name: wisecost-conf-volume
-              mountPath: /wisecost/conf
+              mountPath: /wiseinf/conf
 #              subPath: wisecost.yml
           ports:
             - containerPort: 7070
@@ -147,7 +119,7 @@ spec:
         # Configs for wisecost
         - name: wisecost-data-volume
           hostPath:
-            path: /wisecost/data1
+            path: /wisecost/data
             type: DirectoryOrCreate
         - name: wisecost-logs-volume
           hostPath:
