--- a/cluster-optimizer/yaml/optimizer.yaml
+++ b/cluster-optimizer/yaml/optimizer.yaml
@@ -2,10 +2,10 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: optimzier-nginx-config
+  name: optimizer-nginx-config
   namespace: wiseinf-system
   labels:
-    app: optimzier
+    app: optimizer
 data:
   default.conf: |-
       server {
@@ -31,35 +31,23 @@ data:
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: optimzier-conf
+  name: optimizer-conf
   namespace: wiseinf-system
   labels:
-    app: optimzier
+    app: optimizer
 data:
-  optimzier.yaml: |-
+  cluster-optimizer.yaml: |-
     server:
       port: 7070
     engine:
       maxQueryDuration: 1h
-      preloadingKubeObjects: false
-      useQueryCache: false
-      enableETL: false
+    storage:
+      dataSource:
+        name: "optimizer:Optimizer~@tcp(127.0.0.1:3306)/optimizer?charset=utf8mb4&parseTime=true&loc=Local"
+        maxOpenConns: 10
     optimize:
       dataSource:
-        name: "wisecost:Wisecost~@tcp(127.0.0.1:3306)/wisecost?charset=utf8mb4&parseTime=true&loc=Local"
-        maxOpenConns: 20
-      strategyConfigs:
-        "OOM": 
-          enabled: true
-        "Resource Recommendation":
-          enabled: true
-        "No Quota":
-          enabled: true
-      enabled: true
-    kubestore:
-      type: mysql
-      parameters:
-        dataSourceName: "wisecost:Wisecost~@tcp(mysql:3306)/storage?charset=utf8mb4&parseTime=true"
+        name: "optimizer:Optimizer~@tcp(127.0.0.1:3306)/optimizer?charset=utf8mb4&parseTime=true&loc=Local"
         maxOpenConns: 10
 
 ---
@@ -67,93 +55,114 @@ kind: Deployment
 apiVersion: apps/v1
 metadata:
   labels:
-    app: optimzier
-  name: optimzier
+    app: optimizer
+  name: optimizer
   namespace: wiseinf-system
 spec:
   replicas: 1
   revisionHistoryLimit: 10
   selector:
     matchLabels:
-      app: optimzier
+      app: optimizer
   template:
     metadata:
       labels:
-        app: optimzier
+        app: optimizer
+        group: wiseinf
+        version: 1.1.0
     spec:
-      hostNetwork: true
+#      hostNetwork: true
       dnsPolicy: ClusterFirstWithHostNet
       securityContext:
         runAsUser: 0
       containers:
-        - name: optimzier-ui
-          image: wiseinf/optimzier-ui:701d19d
+        - name: optimizer-ui
+          image: wiseinf/cluster-optimizer-ui:1.1.0
           imagePullPolicy: IfNotPresent
           volumeMounts:
-            - name: optimzier-nginx-config
+            - name: optimizer-nginx-config
               mountPath: /etc/nginx/conf.d
           ports:
             - containerPort: 80
               protocol: TCP
           resources:
             requests:
-              cpu: 200m
-              memory: 500M
+              cpu: 100m
+              memory: 200M
             limits:
               cpu: 1000m
-              memory: 2G
-        - name: optimzier
-          image: wiseinf/optimzier:99e308e
+              memory: 1G
+        - name: optimizer
+          image: wiseinf/optimizer:1.1.0
           command:
-            - "/wiseinf/optimzier"
-            - "--features=APIServer"
+            - "/wiseinf/optimizer"
+          #  - "--features=APIServer"
           imagePullPolicy: IfNotPresent
           volumeMounts:
-            - name: optimzier-data-volume
+            - name: optimizer-data-volume
               mountPath: /wiseinf/data
-            - name: optimzier-logs-volume
+            - name: optimizer-logs-volume
               mountPath: /wiseinf/logs
-            - name: optimzier-conf-volume
+            - name: optimizer-conf-volume
               mountPath: /wiseinf/conf
-#              subPath: wisecost.yml
           ports:
             - containerPort: 7070
               protocol: TCP
           resources:
             requests:
-              cpu: 200m
-              memory: 500M
+              cpu: 100m
+              memory: 200M
             limits:
-              cpu: 2000m
-              memory: 4G
+              cpu: 1000m
+              memory: 1G
       volumes:
-        # Config for wisecost-ui
-        - name: optimzier-nginx-config
+        # Config for optimizer-ui
+        - name: optimizer-nginx-config
           configMap:
-            name: optimzier-nginx-config
-        # Configs for wisecost
-        - name: optimzier-data-volume
+            name: optimizer-nginx-config
+        # Configs for optimizer
+        - name: optimizer-data-volume
           hostPath:
-            path: /optimzier/data
+            path: /optimizer/data
             type: DirectoryOrCreate
-        - name: optimzier-logs-volume
+        - name: optimizer-logs-volume
           hostPath:
-            path: /optimzier/logs
+            path: /optimizer/logs
             type: DirectoryOrCreate
-        - name: optimzier-conf-volume
+        - name: optimizer-conf-volume
           configMap:
-            name: optimzier-conf
+            name: optimizer-conf
 ---
 kind: Service
 apiVersion: v1
 metadata:
   labels:
-    app: optimzier-ui
-  name:  optimzier-ui-service
+    app: optimizer
+  name:  optimizer
+  namespace: wiseinf-system
 spec:
   ports:
     - port: 80
+#      nodePort: 30000
       targetPort: 80
   selector:
-    app: optimzier
-  type: NodePort
+    app: optimizer
+  type: ClusterIP
+# ---
+# apiVersion: networking.k8s.io/v1
+# kind: Ingress
+# metadata:
+#   name: optimizer
+#   namespace: wiseinf-system
+# spec:
+#   rules:
+#     - host: optimizer.{your domain name}
+#       http:
+#         paths:
+#           - backend:
+#               service:
+#                 name: optimizer
+#                 port:
+#                   number: 80
+#             path: /
+#             pathType: ImplementationSpecific
