--- a/cluster-optimizer/yaml/optimizer.yaml
+++ b/cluster-optimizer/yaml/optimizer.yaml
@@ -43,11 +43,11 @@ data:
       maxQueryDuration: 1h
     optconf:
       dataSource:
-        name: "root:Optimizer~@tcp(127.0.0.1:3306)/optconf?createDatabaseIfNotExist=true&charset=utf8mb4&parseTime=true&loc=Local"
+        name: "root:optimizer@tcp(optimizer-mysql:3306)/optconf?createDatabaseIfNotExist=true&charset=utf8mb4&parseTime=true&loc=Local"
         maxOpenConns: 10
     optdata:
       dataSource:
-        name: "root:Optimizer~@tcp(127.0.0.1:3306)/optdata?createDatabaseIfNotExist=true&charset=utf8mb4&parseTime=true&loc=Local"
+        name: "root:optimizer@tcp(optimizer-mysql:3306)/optdata?createDatabaseIfNotExist=true&charset=utf8mb4&parseTime=true&loc=Local"
         maxOpenConns: 10
 
 ---
@@ -78,7 +78,7 @@ spec:
       containers:
         - name: optimizer-ui
           image: wiseinf/optimizer-ui:1.1.0
-          imagePullPolicy: Always
+          imagePullPolicy: IfNotPresent
           volumeMounts:
             - name: optimizer-nginx-config
               mountPath: /etc/nginx/conf.d
@@ -96,7 +96,7 @@ spec:
           image: wiseinf/optimizer:1.1.0
           command:
             - "/wiseinf/optimizer"
-          imagePullPolicy: Always
+          imagePullPolicy: IfNotPresent
           volumeMounts:
             - name: optimizer-data-volume
               mountPath: /wiseinf/data
